--- a/index.html
+++ b/index.html
@@ -18,19 +18,17 @@
         <span data-node-name="greeting">Hi</span>
         <span data-node-name="name">Yaya</span>
       </h1>
-      <!--<p class="two" data-node-name="greetingText">I really like your name btw!</p>-->
+      <p class="two" data-node-name="greetingText">I really like your name btw!</p>
     </div>
     <div class="three">
       <p data-node-name="text1">It's 21st of April!!</p>
     </div>
-    <!--
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox" data-node-name="textInChatBox">Happy!! Yeee! Many many happy blah...</p>
         <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
       </div>
     </div>
-  -->
     <div class="five">
       <p class="idea-1" data-node-name="text2">That's what I was going to do.</p>
       <p class="idea-2" data-node-name="text3">But then I stopped.</p>
